# c-log

./: .replit  CMakeLists.txt  README.md  replit.nix
.github/workflows/: build.yml
include/c-log/: log.h
src/: log.c
test/: test.c
